--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -7,8 +7,8 @@
   color: $mainColor;
   position: fixed;
   top: 0;
-  z-index: 2;
-  transition: 1s ease;
+  z-index: 3;
+  transition: all 1s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -19,6 +19,7 @@
     .left {
       display: flex;
       align-items: center;
+
       .logo {
         font-size: 40px;
         font-weight: 700;
@@ -26,10 +27,12 @@
         color: inherit;
         margin-right: 40px;
       }
+
       .itemContainer {
         display: flex;
         align-items: center;
         margin-left: 30px;
+
         .icon {
           font-size: 18px;
           margin-right: 5px;
@@ -41,6 +44,7 @@
         }
       }
     }
+
     .right {
       .hamburger {
         width: 32px;
@@ -60,6 +64,7 @@
       }
     }
   }
+
   &.active {
     background-color: $mainColor;
     color: white;
