--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -15,24 +15,44 @@
     padding: 0;
     list-style: none;
     display: flex;
-
-    li {
-      font-size: 14px;
-      margin-right: 50px;
-      padding: 7px;
-      border-radius: 10px;
-      cursor: pointer;
-
-      &.active {
-        background-color: $mainColor;
-        color: white;
-      }
-    }
   }
   .container {
-    width: 70%;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
+    .item {
+      width: 320px;
+      height: 250px;
+      border-radius: 20px;
+      margin: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+      transition: all 0.5 ease;
+      cursor: pointer;
+
+      h3 {
+        position: absolute;
+        font-size: 20px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
+      &:hover {
+        background-color: $mainColor;
+        img {
+          opacity: 0.2;
+          z-index: 0;
+        }
+      }
+    }
   }
 }
