--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: white;
+  background-color: #ebf6fa;
   color: $mainColor;
   position: fixed;
   top: 0;
